<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.RegistroFragment">

    <EditText
        android:id="@+id/etFullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:hint="@string/et_hint_Full_Name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="83dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="43dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:helperText="@string/et_mail"
        app:helperTextEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/rgGender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFullname"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="0dp"
        android:layout_height="141dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnSave"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbtnHombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vale_btn_hombre" />

        <RadioButton
            android:id="@+id/rbtnMujer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vale_btn_mujer" />

        <RadioButton
            android:id="@+id/rbtnOtros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vale_btn_otros" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spnCountry"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="34dp"
        app:layout_constraintBottom_toTopOf="@+id/chckLicence"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgGender" />

    <CheckBox
        android:id="@+id/chckLicence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="144dp"
        android:text="@string/val_chck_licencia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/spnCountry" />

    <CheckBox
        android:id="@+id/chckCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:text="@string/val_chck_car"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="@+id/btnSave"
        app:layout_constraintStart_toEndOf="@+id/btnSave" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="163dp"
        android:layout_height="47dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="75dp"
        android:text="@string/val_btn_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/chckLicence" />

</androidx.constraintlayout.widget.ConstraintLayout>